# aiorun

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: workflow.yaml
aiogo/: __init__.py
test/: test_go.py
